<resources>
    <string name="app_name">Light Browser</string>
    <string name="action_settings">Settings</string>
    <string name="btnBackButton" translatable="false"><![CDATA[<<]]></string>
    <string name="btnForwardText" translatable="false"><![CDATA[>>]]></string>
    <string name="KEY_INURL_INTENT" translatable="false">InURL</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_share">Share</string>
    <string name="menu_open_with">Open With</string>
    <string name="menu_ncbookmarks">NCBookmarks</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="setting_string_homepage">Homepage</string>
    <string name="setting_string_fabbutton">FAB Button</string>
    <string name="setting_string_default">Default</string>
    <string name="setting_string_disabled">Disabled</string>
    <string name="setting_string_">Discard! Due to Invaild URL.</string>
    <string name="setting_string_save_change">Change saved.</string>
    <string name="setting_string_apply">Apply</string>
    <string name="setting_string_cancel">Cancel</string>
    <string name="setting_string_fabbutton_mode">Fab button mode</string>
    <string name="setting_string_save_turn_to">"Saved! Now turn to: "</string>
    <string name="setting_activity">Settings</string>
    <string name="multi_tab_turn_secondary_tab">Turn to Secondary Tab.</string>
    <string name="multi_tab_turn_primary_tab">Turn to Primary Tab.</string>
    <string name="menu_switch_tab">Switch Tab</string>
    <string name="menu_history_string">History</string>
    <string name="menu_string_add_ncbookmark">Add NCBookmark</string>
    <string name="menu_string_view_ncbookmarks">View NCBookmarks</string>
    <string name="find">Find...</string>
    <string name="string_pref_custom_user_agent">Custom User Agent</string>
    <string name="setting_string_custom_user_agent_title">Custom User Agent</string>
    <string name="setting_string_enter_hint">Enter your User Agent ...</string>
    <array name="common_string_array_sharing_format_array">
        <item>Link (default)</item>
        <item>Title + Link</item>
    </array>
    <array name="common_string_array_sharing_format_array_int">
        <item>0</item>
        <item>1</item>
    </array>
    <string name="common_string_array_sharing_format_0">Link (default)</string>
    <string name="common_string_array_sharing_format_1">Title + Link</string>
    <string name="title_activity_pref" translatable="false">Preferences</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="org.lenchan139.lightbrowser.Fab.array" translatable="false">
        <item>Disable</item>
        <item>Home</item>
        <item>Refresh</item>
        <item>Share</item>
        <item>Context Menu</item>
        <item>Tab Switch</item>
        <item>Open With</item>
    </string-array>
    <string name="common_string_array_pref_fab_title" translatable="false">Fab Button</string>
    <string name="common_string_array_pref_fab_0">Disable</string>
    <string name="common_string_array_pref_fab_1">Home</string>
    <string name="common_string_array_pref_fab_2">Refresh</string>
    <string name="common_string_array_pref_fab_3">Share</string>
    <string name="common_string_array_pref_fab_4">Context Menu</string>
    <string name="common_string_array_pref_fab_5">Tab Switch</string>
    <string name="common_string_array_pref_fab_6">Open With</string>
    <string name="common_string_default_homepage_pref" translatable="false">https://duckduckgo.com/</string>
    <string name="common_string_homepage_title" translatable="false">Home Page</string>
    <string name="ARRAY_pref_Search_Engine_Default_array_url_default" translatable="false">https://duckduckgo.com/?q=!@keywoard</string>
    <array name="ARRAY_pref_Search_Engine_Default_array_name">
        <item>DuckDuckGo</item>
        <item>Google</item>
    </array>
    <array name="ARRAY_pref_Search_Engine_Default_array_url">
        <item>https://duckduckgo.com/?q=!@keywoard</item>
        <item>https://www.google.com/search?q=!@keywoard</item>
    </array>








    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>

</resources>
