<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="Reserve Button"
        android:title="Reserve Option" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/common_string_default_homepage_pref"
        android:inputType="textUri"
        android:key="org.lenchan139.lightbrowser.Home"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/common_string_homepage_title" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="Disable"
        android:entries="@array/org.lenchan139.lightbrowser.Fab.array"
        android:entryValues="@array/org.lenchan139.lightbrowser.Fab.array"
        android:key="org.lenchan139.lightbrowser.Fab"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/common_string_array_pref_fab_title" />

    <!-- sharing -->
    <ListPreference
        android:defaultValue="@string/common_string_array_sharing_format_0"
        android:entries="@array/common_string_array_sharing_format_array"
        android:entryValues="@array/common_string_array_sharing_format_array"
        android:key="org.lenchan139.lightbrowser.sharingformat.pref"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Sharing Format" />


    <!-- search engine -->
    <ListPreference
        android:defaultValue="@string/ARRAY_pref_Search_Engine_Default_array_url_default"
        android:entries="@array/ARRAY_pref_Search_Engine_Default_array_name"
        android:entryValues="@array/ARRAY_pref_Search_Engine_Default_array_url"
        android:key="org.lenchan139.lightbrowser.TAG_pref_Search_Engine_Url"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Search Engine" />

</PreferenceScreen>
